# radr

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  comparison_tables.md  implementation_status_and_features.md
.github/workflows/: ci.yml
cmake/: radr-config.cmake
docs/: caching_begin.md  const.md  examples.md  feature_table.md  getting_started.md  implementation_status.md  iterator_size.md  performance.md  range_properties.md  regular.md  safety.md  simpler_types.md  tradeoffs.md
include/radr/: _pipe.hpp  as_const.hpp  as_rvalue.hpp  bind_back.hpp  borrow.hpp  borrowing_rad.hpp  cached_bounds.hpp  concepts.hpp  copyable_box.hpp  detail.hpp  drop.hpp  drop_while.hpp  filter.hpp  fwd.hpp  generator.hpp  make_single_pass.hpp  owning_rad.hpp  rad_interface.hpp  range_access.hpp  range_bounds.hpp  range_ref.hpp  reverse.hpp  slice.hpp  subborrow.hpp  tags.hpp  take.hpp  take_exactly.hpp  transform.hpp  version.hpp
include/radr/custom/: find_common_end.hpp  rebind_iterator.hpp  subborrow.hpp  tags.hpp
include/radr/detail/: basic_const_iterator.hpp  bind_back.hpp  copyable_box.hpp  detail.hpp  fwd.hpp  indirect.hpp  pipe.hpp  semiregular_box.hpp
include/radr/factory/: counted.hpp  empty.hpp  iota.hpp  istream.hpp  repeat.hpp  single.hpp
include/radr/rad/: all.hpp  as_const.hpp  as_rvalue.hpp  cache_end.hpp  drop.hpp  drop_while.hpp  elements.hpp  filter.hpp  join.hpp  make_single_pass.hpp  reverse.hpp  slice.hpp  split.hpp  take.hpp  take_exactly.hpp  take_while.hpp  to_common.hpp  to_single_pass.hpp  transform.hpp  unchecked_take.hpp  zip_with.hpp
include/radr/rad_util/: borrowing_rad.hpp  owning_rad.hpp  rad_interface.hpp
include/radr/standalone/: empty_range.hpp  empty_rng.hpp  repeat_rng.hpp  single.hpp  single_rng.hpp
tests/: radr-test.cmake
tests/benchmark/: CMakeLists.txt
tests/benchmark/rad/: filter.cpp  filter_transform.cpp  join.cpp  transform.cpp
tests/clang_format/: CMakeLists.txt
tests/include/radr/test/: adaptor_template.hpp  aux_ranges.hpp  gtest_helpers.hpp
tests/unit/: CMakeLists.txt
tests/unit/adaptors/: CMakeLists.txt  as_const.cpp  as_rvalue.cpp  filter.cpp  make_single_pass.cpp  reverse.cpp  transform.cpp
tests/unit/custom/: CMakeLists.txt  subborrow.cpp
tests/unit/factory/: CMakeLists.txt  counted.cpp  empty.cpp  iota.cpp  istream.cpp  repeat.cpp  single.cpp
tests/unit/integration/: CMakeLists.txt  caching_begin.cpp  iterator_size.cpp  owning_copy.cpp  simpler_types.cpp
tests/unit/rad/: CMakeLists.txt  all_.cpp  as_const.cpp  as_rvalue.cpp  cache_end.cpp  drop.cpp  drop_while.cpp  elements.cpp  filter.cpp  join.cpp  make_single_pass.cpp  reverse.cpp  slice.cpp  split.cpp  take.cpp  take_exactly.cpp  take_while.cpp  to_common.cpp  to_single_pass.cpp  transform.cpp  unchecked_take.cpp  zip_with.cpp
tests/unit/standalone/: CMakeLists.txt  empty_range.cpp  empty_rng.cpp  repeat_rng.cpp  single.cpp  single_rng.cpp
